--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -46,7 +46,7 @@
                       <th>Recommended</th>
                       <th>UC</th>
                       <th>Taluka</th>
-                      <th>Deh</th>
+                      @*<th>Deh</th>*@
                       <th>Village</th>
                       <th>City</th>
                       <th>Address</th>
@@ -76,7 +76,7 @@
                                       <td>@entrie.Recommended</td>
                                       <td>@entrie.UnionCounsil</td>
                                       <td>@entrie.Taluka</td>
-                                      <td>@entrie.Deh</td>
+                                      @*<td>@entrie.Deh</td>*@
                                       <td>@entrie.Village</td>
                                       <td>@entrie.City</td>
                                       <td>@entrie.Address</td>
