--- a/EntryNow.WebApp/Pages/Entries/Index.razor
+++ b/EntryNow.WebApp/Pages/Entries/Index.razor
@@ -30,7 +30,7 @@
                   <NavLink href="entries/add">
                     <h3 class="card-title"><i class="fas fa-plus"></i>&nbsp;&nbsp;Click to add a Entry! </h3>
                   </NavLink>
-                    @if (totalEntries >= 0)
+                    @if (totalEntries >= 0 && !loading)
                     {
                         <a href="#" style="float:right; color:grey;"><i class="fas fa-download"></i></a>
                         <a style="float:right; color:grey;">Total @totalEntries Entries Found&nbsp;&nbsp;</a>
